css fix: vertically align product images

--- a/apparelrow/media/src/partials/_application.sass
+++ b/apparelrow/media/src/partials/_application.sass
@@ -394,6 +394,9 @@ div#product-list
     background-color: white
     position: relative
     height: 153px
+    line-height: 153px
+    img
+      vertical-align: middle
 
   span.likes
     display: none
